2011-11-07  Emil A Eklund  <eae@chromium.org>

        Revert platform and scrolling to ints
        https://bugs.webkit.org/show_bug.cgi?id=71585

        Reviewed by Eric Seidel.

        Replace all uses of LayoutUnit and related types with ints in platform
        and scrolling code.

        * tests/ScrollAnimatorNoneTest.cpp:
        (MockScrollableArea::visibleHeight):
        (MockScrollableArea::visibleWidth):

2011-11-07  Adam Barth  <abarth@webkit.org>

        Move DomainRelaxationForbidden scheme registry to SchemeRegistry
        https://bugs.webkit.org/show_bug.cgi?id=71750

        Reviewed by Eric Seidel.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setDomainRelaxationForbidden):

2011-11-07  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=71490
        Support uiStateTransitionProgress for scrollbars
        -and corresponding-
        <rdar://problem/9849612>

        Reviewed by Sam Weinig.

        Scrollbar::mouseUp() now takes a PlatformMouseEvent as a parameter.
        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::onMouseUp):

2011-11-07  Fady Samuel  <fsamuel@chromium.org>

        [Chromium] Rename WebView::scalePage to WebView::setPageScaleFactor to match WebCore
        https://bugs.webkit.org/show_bug.cgi?id=71485

        Reviewed by Darin Fisher.

        Created new method setPageScaleFactor to replace scalePage to match
        renamed method in WebCore. This change will happen in three stages:

        1. A new method is created called setPageScaleFactor with the same
           functionality as scalePage.
        2. All call sites of scalePage are changed to setPageScaleFactor in the Chromium
           repository.
        3. scalePage is deleted from WebView/WebViewImpl

        * public/WebView.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::pageScaleFactor):
        (WebKit::WebViewImpl::scalePage):