@@ -1,3 +1,15 @@
+2011-11-08  Yury Semikhatsky  <yurys@chromium.org>
+
+        [Chromium] Web Inspector: add sanity test for automatic reattach to a page which is reloaded after crash
+        https://bugs.webkit.org/show_bug.cgi?id=71786
+
+        Added a test function that checks if console evaluation works after crashed tab reloading.
+
+        Reviewed by Pavel Feldman.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.testReattachAfterCrash):
+
 2011-11-07  Emil A Eklund  <eae@chromium.org>
 
         Revert platform and scrolling to ints
